force-app/main/default/objects/FEC_Case_Stage__c/FEC_Case_Stage__c.object-meta.xml
<CustomObject>
    <label>FEC Case Stage</label>
    <nameField>
        <label>Case Stage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FEC Case Stages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>