force-app/main/default/objects/FEC_Case_Stage__c/fields/FEC_Business_Process__c.field-meta.xml
<CustomField>
    <fullName>FEC_Business_Process__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Tên luồng xử lý</description>
    <label>Business Process</label>
    <referenceTo>FEC_Business_Process__c</referenceTo>
    <relationshipLabel>Case Stage</relationshipLabel>
    <relationshipName>Case_Stage</relationshipName>
    <type>Lookup</type>
</CustomField>