force-app/main/default/objects/FEC_Case_Stage__c/fields/FEC_Nature_of_Cases__c.field-meta.xml
<CustomField>
    <fullName>FEC_Nature_of_Cases__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Thông tin NOC</description>
    <label>Nature of Cases</label>
    <referenceTo>FEC_Nature_of_Case__c</referenceTo>
    <relationshipLabel>Case Stage</relationshipLabel>
    <relationshipName>Case_Stage</relationshipName>
    <type>Lookup</type>
</CustomField>