force-app/main/default/objects/FEC_Case_Stage__c/fields/FEC_Status_Name__c.field-meta.xml
<CustomField>
    <fullName>FEC_Status_Name__c</fullName>
    <label>Status Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>