force-app/main/default/objects/FEC_Case_Stage__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FEC_Name_VN__c</columns>
    <columns>FEC_Code__c</columns>
    <columns>FEC_Alias__c</columns>
    <columns>FEC_Active__c</columns>
    <columns>FEC_Business_Process__c</columns>
    <columns>FEC_Default_Stage__c</columns>
    <columns>FEC_User_Group__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>FEC_Nature_of_Cases__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Case Stages</label>
</ListView>